--- a/src/scss/sections/sections.scss
+++ b/src/scss/sections/sections.scss
@@ -26,6 +26,10 @@
 @import "block-share";
 @import "block-careers-share";
 
+@import "block-careers-filter";
+@import "block-awards";
+@import "block-careers-empty";
+
 // blog
 @import "block-featured-article";
 @import "block-filter";
