--- a/src/scss/components/_blockquote.scss
+++ b/src/scss/components/_blockquote.scss
@@ -13,14 +13,15 @@
 
     .blockquote {
       font-size: 42px;
-      font-weight: 300;
-      line-height: 1.2;
+      font-weight: 350;
+      line-height: 1.1;
     }
 
     .blockquote-footer {
       font-size: 0.875rem;
       line-height: 1.3;
       color: $secondary;
+      font-weight: 500;
 
       &:before {
         display: none;
@@ -43,30 +44,17 @@
         background-size: cover;
         margin: 0 0 25px;
       }
-
-      .blockquote {
-        margin: 0 0 62px;
-      }
-
-      .blockquote-footer {
-        font-size: 1.125rem;
-        font-weight: 500;
-
-        strong {
-          font-weight: 700;
-        }
-      }
     }
   }
 
-  @include media-breakpoint-up(xxl) {
+  @include media-breakpoint-up(xl) {
     figure {
       .blockquote {
-        margin: 0 0 62px;
+        margin: 0 0 51px;
       }
 
       .blockquote-footer {
-        font-size: 1.125rem;
+        font-size: 16px;
         font-weight: 500;
 
         strong {
