--- a/src/scss/sections/_block-banner-article.scss
+++ b/src/scss/sections/_block-banner-article.scss
@@ -15,13 +15,14 @@
 
   .text {
     padding: 29px 24px 31px;
-    font-size: 0.875rem;
+    font-size: 14px;
     line-height: 1.3;
     font-weight: 300;
     letter-spacing: -0.01em;
 
     .category {
       text-transform: uppercase;
+      font-weight: 500;
     }
 
     .h3 {
@@ -40,6 +41,7 @@
       .word {
         overflow: hidden;
         display: block !important;
+        margin: 0 0.25em 0 0;
 
         .char {
           opacity: 0;
@@ -50,6 +52,7 @@
 
     p {
       margin: 0 0 52px;
+      font-weight: 500;
     }
 
     .btn-wrap {
@@ -85,7 +88,8 @@
 
   @include media-breakpoint-up(lg) {
     .text {
-      font-weight: 500;
+      font-weight: 700;
+      font-size: 16px;
     }
     .image {
       height: 100vh;
@@ -106,12 +110,11 @@
       max-width: 903px;
     }
     .text {
-      padding: 0 0 102px;
-      font-size: 12px;
+      padding: 0;
 
       .h3 {
-        font-size: 48px;
-        line-height: 1;
+        font-size: 44px;
+        line-height: 1.2;
         margin-top: 28px;
       }
     }
@@ -119,14 +122,11 @@
 
   @include media-breakpoint-up(xxl) {
     .text {
-      padding: 0 0 118px;
-
-      .category {
-        font-size: 0.875rem;
-      }
+      padding: 0 0 50px;
 
       .h3 {
-        line-height: 1;
+        font-size: 50px;
+        line-height: 60px;
         margin-top: 58px;
       }
     }
