--- a/src/scss/sections/_block-blog-article.scss
+++ b/src/scss/sections/_block-blog-article.scss
@@ -2,8 +2,8 @@
   padding: 0 0 30px;
 
   .article-intro {
-    font-size: 2rem;
-    line-height: 1.04;
+    font-size: 28px;
+    line-height: 1.2;
     padding: 29px 0 19px;
     letter-spacing: 0.01em;
     font-weight: 300;
@@ -83,8 +83,8 @@
     font-weight: 300;
 
     h4 {
-      @include font-size(2.25rem, $h4-font-size);
-      line-height: 0.98;
+      @include font-size(2.125rem, $h4-font-size);
+      line-height: 1.2;
       margin: 57px 0 51px;
       font-weight: 300;
 
@@ -148,7 +148,8 @@
     .article-intro {
       padding: 128px 0 0;
       font-size: 28px;
-      line-height: 1.3;
+      line-height: 1.2;
+      font-weight: 350;
     }
 
     .row {
@@ -175,7 +176,7 @@
     }
 
     .quote-wrapper {
-      padding: 0 0 64px;
+      padding: 0 0 51px;
 
       .inner {
         transform: translateX(-45%) !important;
@@ -195,17 +196,18 @@
       }
 
       h4 {
-        margin: 64px 0 30px;
+        margin: 51px 0 30px;
+        line-height: 1.2;
       }
 
       .card-social {
         padding: 74px 48px;
         border-radius: 16px;
-        margin: 64px 0;
+        margin: 51px 0;
       }
 
       .podcast {
-        margin: 64px 0;
+        margin: 51px 0;
         width: 768px;
         transform: scale(0.86);
         transform-origin: 0 0;
@@ -227,13 +229,23 @@
     }
   }
 
+  @include media-breakpoint-up(xl) {
+    .article-main {
+      h4 {
+        font-size: 34px;
+        line-height: 1.2;
+      }
+    }
+  }
+
   @include media-breakpoint-up(xxl) {
     padding: 0 0 156px;
 
     .article-intro {
       padding: 128px 0 0;
-      font-size: 2.125rem;
-      line-height: 1.3;
+      font-size: 42px;
+      line-height: 1.2;
+      font-weight: 350;
     }
 
     .row {
@@ -241,7 +253,7 @@
     }
 
     .quote-wrapper {
-      padding: 0 0 64px;
+      padding: 0 0 51px;
 
       .inner {
         transform: translateX(-50%) !important;
@@ -253,19 +265,18 @@
     }
 
     .podcast {
-      margin: 64px 0;
+      margin: 51px 0;
     }
 
     .card-social {
       padding: 69px 62px;
       border-radius: 8px;
-      margin: 64px 0;
+      margin: 51px 0;
     }
 
     .article-main {
       h4 {
-        line-height: 1;
-        margin: 64px 0 30px;
+        margin: 51px 0 30px;
       }
 
       p {
