--- a/src/scss/sections/_block-careers-list.scss
+++ b/src/scss/sections/_block-careers-list.scss
@@ -1,46 +1,10 @@
 .block-careers-list {
-  padding: 60px 0 34px;
-
-  .block-title {
-    h3 {
-      @include font-size($h3-font-size-sm, 2.625rem);
-      font-weight: 500;
-      line-height: 1;
-      margin: 0 0 48px;
-
-      & + h3 {
-        display: none;
-      }
-
-      @include media-breakpoint-down(md) {
-        font-weight: 300;
-      }
-    }
-  }
-
-  form {
-    margin: 0 -8px 52px;
-
-    .field {
-      width: 100%;
-
-      .form-select {
-        font-size: 0.875rem;
-        text-transform: uppercase;
-        padding-top: 1.35rem;
-        padding-bottom: 1.3rem;
-      }
-    }
-  }
+  padding: 34px 0 118px;
 
   .list {
     h3 {
-      font-weight: 500;
+      font-weight: 400;
       margin: 0 0 20px;
-
-      @include media-breakpoint-down(md) {
-        font-weight: 300;
-      }
     }
 
     ul {
@@ -64,6 +28,7 @@
           display: block;
           padding: 0 0 14px;
           position: relative;
+          font-weight: 300;
 
           .line {
             content: "";
@@ -81,70 +46,58 @@
             @include media-breakpoint-down(md) {
               width: 16px;
               height: 16px;
-            }
-          }
 
-          @include media-breakpoint-down(md) {
-            font-weight: 300;
+              &:before {
+                border-radius: 100%;
+              }
+
+              .btn-label-wrap {
+                display: none;
+              }
+
+              .btn-arrow {
+                margin-left: 0;
+              }
+            }
           }
         }
       }
     }
   }
 
+  .list-more {
+    text-align: center;
+    padding: 72px 0 0;
+
+    h3 {
+      font-size: clamp(2.25rem, 2.1875vw, 2.625rem);
+      font-weight: 300;
+      margin: 0 0 55px;
+    }
+
+    .btn {
+      width: auto;
+      height: 74px;
+    }
+  }
+
   @include media-breakpoint-up(md) {
-    .block-title {
-      h3 {
-        line-height: 1.05;
-        margin: 0;
-
-        & + h3 {
-          display: block;
-          margin: 0 0 23px;
-        }
-      }
-    }
-
-    form {
-      margin: 0 0 52px;
-
-      .field {
-        width: auto;
-      }
-    }
-
     .list {
       h3 {
         font-size: 1.5rem;
+        font-weight: 500;
+      }
+    }
+
+    .list-more {
+      h3 {
+        font-weight: 350;
       }
     }
   }
 
   @include media-breakpoint-between(xl, xxl) {
-    padding: 155px 0 0px;
-    margin: 0 0 -25px;
-
-    .block-title {
-      h3 {
-        letter-spacing: -0.01em;
-      }
-    }
-
-    form {
-      margin: 0 0 126px;
-
-      .field {
-        width: 305px;
-
-        .form-select {
-          font-size: 1rem;
-          text-transform: none;
-          font-weight: 500;
-          padding: 1.78rem 4rem 1.78rem 2rem;
-          background-position: right 1.8rem center;
-        }
-      }
-    }
+    padding: 155px 0 161px;
 
     .list {
       h3 {
@@ -175,40 +128,38 @@
         }
       }
     }
+
+    .list-more {
+      h3 {
+        font-size: 36px;
+      }
+    }
+  }
+
+  @include media-breakpoint-up(xl) {
+    .list-more {
+      padding: 156px 0 0;
+
+      h3 {
+        margin: 0 0 87px;
+      }
+    }
   }
 
   @include media-breakpoint-up(xxl) {
-    padding: 214px 0 0px;
-    margin: 0 0 22px;
-
-    form {
-      margin: 0 0 98px;
-
-      .field {
-        width: 305px;
-
-        .form-select {
-          font-size: 1rem;
-          line-height: 2;
-          text-transform: none;
-          font-weight: 500;
-          padding: 1.28rem 4rem 1.28rem 2rem;
-          background-position: right 1.8rem center;
-        }
-      }
-    }
+    padding: 114px 0 165px;
 
     .list {
       h3 {
-        margin: 0 0 108px;
+        margin: 0 0 92px;
 
         &:first-child {
-          margin: 0 0 96px;
+          margin: 0 0 90px;
         }
       }
 
       ul {
-        margin: 0 0 77px;
+        margin: 0 0 105px;
 
         li {
           margin: 0 0 18px;
