--- a/src/scss/sections/_block-careers-share.scss
+++ b/src/scss/sections/_block-careers-share.scss
@@ -2,11 +2,17 @@
   margin: 50px 0 0;
 
   .wrapper {
-    padding: 420px 30px 76px;
+    padding: 67px 33px 62px;
   }
 
   .careers-share-image {
-    display: none;
+    margin: 0 0 34px;
+
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
   }
 
   .careers-share-text {
@@ -18,7 +24,8 @@
       color: $primary;
       letter-spacing: 0.01em;
       text-transform: uppercase;
-      margin: 0 0 4px;
+      margin: 0 0 28px;
+      font-weight: 400;
 
       @include media-breakpoint-down(lg) {
         order: -1;
@@ -28,7 +35,7 @@
     p {
       font-weight: 350;
       line-height: 1.35;
-      margin: 0 0 52px;
+      margin: 0 0 32px;
     }
 
     .socials {
@@ -70,10 +77,10 @@
     }
 
     .careers-share-image {
-      display: block;
       width: 38.2%;
       max-width: 467px;
       flex: 0 0 auto;
+      margin: 0;
 
       img {
         display: block;
@@ -87,7 +94,8 @@
       padding-left: 32px;
 
       h2 {
-        margin: 33px 0 50px;
+        margin: 26px 0 42px;
+        font-weight: 350;
       }
 
       p {
@@ -97,7 +105,7 @@
       }
 
       .socials {
-        align-items: flex-start;
+        align-items: center;
 
         a {
           margin: 0 42px 0 0;
@@ -125,7 +133,13 @@
 
   @include media-breakpoint-up(xl) {
     .careers-share-text {
-      padding: 52px 0 0 114px;
+      padding: 28px 0 0 12.8%;
+
+      p {
+        font-size: 26px;
+        line-height: 1.35;
+        max-width: 11em;
+      }
     }
   }
 
@@ -134,15 +148,19 @@
 
     .wrapper {
       padding: 70px 0 85px;
+      align-items: flex-end;
     }
 
     .careers-share-text {
-      padding: 86px 0 0 80px;
+      padding: 0 0 85px 80px;
 
       h2 {
-        margin: 30px 0 40px -0.08em;
+        margin: 30px 0 21px -0.08em;
         font-weight: 350;
         letter-spacing: -0.01em;
+      }
+      p {
+        max-width: 14.5em;
       }
     }
   }
