--- a/src/scss/sections/_block-home-1.scss
+++ b/src/scss/sections/_block-home-1.scss
@@ -2,7 +2,7 @@
   position: static;
   overflow: visible;
 
-  & > .lottie {
+  #scrollToExplore {
     position: fixed;
     left: 50%;
     bottom: 5vh;
