--- a/src/scss/sections/_page-header.scss
+++ b/src/scss/sections/_page-header.scss
@@ -106,57 +106,60 @@
 }
 
 .page-header-career {
-  padding: 136px 0 36px;
+  padding: 121px 0 16px;
 
-  h2 {
-    text-transform: uppercase;
-    margin: 0 0 19px;
+  .link-back {
+    font-size: 14px;
     font-weight: 300;
+    line-height: 18.2px;
+    letter-spacing: -0.01em;
+    display: inline-block;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #818181;
   }
 
-  p {
-    font-size: 20px;
+  h1 {
+    font-size: clamp(2.875rem, get-vw(6.875rem), 6.875rem);
+    text-transform: uppercase;
+    margin: 17px 0 0;
     font-weight: 300;
-    line-height: 1.11;
-    margin: 0;
   }
 
   .tags {
-    margin: 31px 0 0;
+    margin: 23px 0 0;
+  }
+
+  @include media-breakpoint-between(xl, xxl) {
+    h1 {
+      font-size: 5.55vw;
+      line-height: 0.9;
+      margin: 41px 0 0;
+    }
   }
 
   @include media-breakpoint-up(xl) {
     padding: 192px 0 50px;
 
-    h2 {
-      margin: 0;
-      line-height: 1;
-    }
-
-    p {
-      margin-left: 30px;
-      font-size: 21px;
-      font-weight: 400;
-      line-height: 1.3;
-      letter-spacing: 0.01em;
+    .link-back {
+      font-weight: 500;
     }
 
     .tags {
-      margin: 17px 0 0;
+      margin: 21px 0 0 5px;
     }
   }
 
   @include media-breakpoint-up(xxl) {
-    padding: 233px 0 60px;
+    padding: 184px 0 60px;
 
-    p {
-      margin-top: 68px;
-      margin-left: -65px;
-      font-size: 34px;
+    h1 {
+      margin: 50px 0 0;
+      line-height: 0.9;
     }
 
     .tags {
-      margin: 44px 0 0;
+      margin: 12px 0 0;
     }
   }
 }
