--- a/src/scss/sections/_block-home-3.scss
+++ b/src/scss/sections/_block-home-3.scss
@@ -13,11 +13,11 @@
   .number {
     font-size: 51.28vw;
     font-weight: 400;
-    line-height: 1;
+    line-height: 0.83;
     letter-spacing: -0.02em;
     text-align: center;
-    transform: translateY(-0.18em);
-    margin: 0 0 -0.045em;
+    transform: translateY(-30px);
+    margin: 0;
 
     .word {
       display: inline-flex;
@@ -74,8 +74,6 @@
 
     .number {
       font-size: 43.33vw;
-      transform: translateY(-0.175em);
-      margin: 0 0 -0.1em;
     }
 
     .logos-list {
@@ -92,7 +90,7 @@
 
     p {
       max-width: 42.5em;
-      margin: 0 0 50px;
+      margin: 0 auto 50px;
       line-height: 1.3;
       text-align: center;
     }
@@ -116,10 +114,6 @@
   }
 
   @include media-breakpoint-up(xl) {
-    .number {
-      margin: 0 0 -0.192em;
-    }
-
     p {
       font-size: 36px;
       margin: 0 0 105px;
@@ -147,7 +141,6 @@
 
     .number {
       font-size: 800px;
-      transform: translateY(-0.15em);
     }
 
     .logos-list {
