--- a/src/scss/sections/_block-home-4.scss
+++ b/src/scss/sections/_block-home-4.scss
@@ -97,27 +97,30 @@
         }
       }
 
+      p {
+        margin: 15px 0;
+        font-weight: 350;
+        line-height: 1.154;
+
+        @include media-breakpoint-down(md) {
+          font-weight: 300;
+        }
+      }
+
       .card-footer {
         margin-top: auto;
-        padding: 15px 0 0;
-
-        p {
-          margin: 0 0 10px;
-          font-weight: 350;
-          line-height: 1.154;
-
-          @include media-breakpoint-down(md) {
-            font-weight: 300;
-          }
-        }
 
         strong {
-          font-size: 0.75rem;
+          font-size: 14px;
           font-weight: 500;
           line-height: 1.3;
           letter-spacing: 0.01em;
           display: block;
           margin: 0 0 13px;
+
+          span {
+            display: block;
+          }
         }
 
         .card-logo {
@@ -269,8 +272,7 @@
 
         .card-footer {
           strong {
-            font-size: 1rem;
-            font-weight: 500;
+            font-size: 16px;
             letter-spacing: 0;
             margin: 0 0 13px;
           }
@@ -337,12 +339,9 @@
         .card-icon {
           height: 190px;
         }
-        .card-footer {
-          padding: 31px 0 0;
-          p {
-            letter-spacing: 0.01em;
-            margin: 0 0 22px;
-          }
+        p {
+          letter-spacing: 0.01em;
+          margin: 15px 0 22px;
         }
       }
     }
